hphp/test/slow/object/const/redeclare-from-const-in-non-flattened-trait.php.expectf
Fatal error: trait declaration of property 'p' is incompatible with previous declaration in %s/redeclare-from-const-in-non-flattened-trait.php on line 5
